--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <html>
 <head>
   <title>GW2 Daily Viewer</title>
+<link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Open+Sans:300,400,600,700" rel="stylesheet" type="text/css">
 </head>
 <style media="screen">
   body {
+    background-color: #fff;
     width: 600px;
     margin: 0 auto;
+    font-family: 'PT Serif', sans-serif;
+    font-weight: normal;
+  }
+  h4, h1 {
+    letter-spacing: 0.04rem;
+    font-weight: normal;
+  }
+  h5 {
+    color: #888;
+    font-weight: normal;
+    letter-spacing: 0.02rem;
   }
 </style>
 <body>
