--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   body {
     background-color: #fff;
-    width: 600px;
+    max-width: 900px;
+    width: 100%;
     margin: 0 auto;
     font-family: 'PT Serif', sans-serif;
     font-weight: normal;
@@ -26,6 +27,12 @@
   footer {
     font-size: 0.85em;
   }
+  main {
+    display: flex;
+  }
+  main .dailies {
+    display: inline-block;
+  }
 
 </style>
 <body>
@@ -33,11 +40,22 @@
     <h1>Gw2 Dailies</h1>
 </header>
 <main>
-  <div class="inhalt pve"><h2>PvE</h2>  </div>
-  <div class="inhalt pvp"><h2>PvP</h2>  </div>
-  <div class="inhalt wvw"><h2>WvW</h2>  </div>
-  <div class="inhalt fractals"><h2>Fractals</h2>  </div>
-  <div class="inhalt special"><h2>Special</h2>  </div>
+  <div class="dailies today">
+    <div class="inhalt"><h1>Today</h1>  </div>
+    <div class="inhalt pve"><h2>PvE</h2>  </div>
+    <div class="inhalt pvp"><h2>PvP</h2>  </div>
+    <div class="inhalt wvw"><h2>WvW</h2>  </div>
+    <div class="inhalt fractals"><h2>Fractals</h2>  </div>
+    <div class="inhalt special"><h2>Special</h2>  </div>
+  </div>
+  <div class="dailies tomorrow">
+    <div class="inhalt"><h1>Tomorrow</h1>  </div>
+    <div class="inhalt pve"><h2>PvE</h2>  </div>
+    <div class="inhalt pvp"><h2>PvP</h2>  </div>
+    <div class="inhalt wvw"><h2>WvW</h2>  </div>
+    <div class="inhalt fractals"><h2>Fractals</h2>  </div>
+    <div class="inhalt special"><h2>Special</h2>  </div>
+  </div>
 </main>
 <footer>
   Made by <a href="https://github.com/StevenKowalzik">Steven Kowalzik</a> - <a href="https://github.com/StevenKowalzik/gw2dailyviewer">GitHub Repository</a>
